<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_radio_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yenhenchia.projectpractice.RadioButton.RadioButtonActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radioBtnMale">

        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexMale"/>

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexFemale"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroupAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radioBtnRange1">
        <RadioButton
            android:id="@+id/radioBtnRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range1" />

        <RadioButton
            android:id="@+id/radioBtnRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range2" />

        <RadioButton
            android:id="@+id/radioBtnRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range3" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/check"/>

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest" />

</LinearLayout>
