<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yenhenchia.projectpractice.RelativeLayout.RelativeLayoutActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRelativeTitle"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txtCmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRelatvieCmp"
        android:layout_below="@id/txtTitle"
        android:layout_alignLeft="@id/txtTitle"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRelativePlayer"
        android:layout_alignRight="@id/txtTitle"
        android:layout_below="@id/txtTitle"
        android:textSize="20sp"
        android:paddingRight="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scissors"
        android:layout_below="@id/txtPlayer"
        android:layout_alignLeft="@id/txtPlayer"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txtCmpPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/btnScissors"
        android:layout_alignLeft="@id/txtTitle"
        android:textSize="30sp"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/btnStone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnScissors"
        android:layout_alignLeft="@id/btnScissors"
        android:text="@string/stone"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStone"
        android:layout_alignLeft="@id/btnScissors"
        android:text="@string/paper"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnPaper"
        android:text="@string/relativeResult"
        android:textSize="20sp"/>
</RelativeLayout>
