<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    tools:context="com.example.yenhenchia.projectpractice.SimpleFragment.SimpleResultFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totoalSet"/>

    <EditText
        android:id="@+id/editTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerWinSet"/>

    <EditText
        android:id="@+id/editPlayerSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmpWinSet"/>

    <EditText
        android:id="@+id/editCmpSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw" />

    <EditText
        android:id="@+id/editDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:focusable="false"/>

</LinearLayout>
