<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auto_complete_text_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yenhenchia.projectpractice.AutoCompleteText.AutoCompleteTextViewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_cmp_input_text"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAutoCompAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_cmp_btn_add" />

    <Button
        android:id="@+id/btnAutoCompClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_cmp_btn_clear" />

</LinearLayout>
