<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progress_bar_and_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yenhenchia.projectpractice.ProgressBarAndDialog.ProgressBarAndDialogActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressBarDefault"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressBarHorizontal"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <ProgressBar
        android:id="@+id/progressHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressBarLarge"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progressBarSmall"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleSmall"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnProgressDefaultDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressBarDefault"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btnProgressHorizontalDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressBarHorizontal"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
