<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seek_bar_and_rating_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yenhenchia.projectpractice.SeekBarAndRatingBar.SeekBarAndRatingBarActivity">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtSeekBarProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekBar_process"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyle"
        android:numStars="5"
        android:rating="2"
        android:layout_marginTop="20dp"
        android:scrollbarSize="20dp"/>

    <TextView
        android:id="@+id/txtRatingBarRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratingBar_value"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtRatingBarProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratingBar_process"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
</LinearLayout>
